--- a/src/style.css
+++ b/src/style.css
@@ -48,6 +48,13 @@ header input:focus {
   background-color: rgba(255, 255, 255, 0.6);
 }
 
+.instruction-temp {
+  font-size: 20px;
+  font-weight: 500;
+  color: white;
+  padding-bottom: 10px;
+}
+
 main {
   flex: 1 1 100%;
   padding: 25px 25px 50px;
@@ -78,7 +85,7 @@ button {
   display: flex;
   flex-direction: column;
   text-align: center;
-  margin-top: 20px;
+  padding-top: 20px;
   color: white;
   font-weight: 500;
 }
